Name:                graph-matching
Version:             0.1
Synopsis:            Bipartite graph maximum cardinality matching using Hopcroft-Karp algorithm
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Ivan Tarasov
Maintainer:          ivan@rethinkdb.com
Category:            Algorithms, Graphs
Build-type:          Simple

Cabal-version:       >= 1.2

Library
  Exposed-modules:   Data.Graph.HopcroftKarp
  
  Build-depends:     base          >= 4     && < 5
                   , containers    >= 0.4   && < 0.5
                   , array         >= 0.3   && < 0.4
                   , transformers  >= 0.2.2 && < 0.3
  
